--- a/bio-station/index.html
+++ b/bio-station/index.html
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 	<div class="container centered">
-		<img src="food-waste.jpg" class="rounded">
+		<img src="food-waste.jpg" class="rounded" width="100%">
 	</div>
 	<div class="container">
 		<div class="content">
