--- a/bio-station/index.html
+++ b/bio-station/index.html
@@ -63,14 +63,12 @@
 		<img src="logo-wg.png" class="logo">
 	</div>
 	<div class="container footer">
-		<div>BioStation Copyright 2019</div>
-		<div>
-			The organization and everything on this page is entirely fabricated fiction.  No part of this page is factual.
-			<br>
-			This website is not associated with any of the claims this page makes or with any of the mentioned businesses 
+		<div class="content">
+			BioStation Copyright 2019
+			<br><br>
+			The organization and everything on this page is entirely fabricated fiction.  No part of this page is factual.  This website is not associated with any of the claims this page makes or with any of the mentioned businesses 
 			and organizations.
 		</div>
 	</div>
-	
 	</body>
 </html>
