--- a/bio-station/index.html
+++ b/bio-station/index.html
@@ -1,7 +1,13 @@
 <html>
-	<header>
+	<head>
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="http://www.likelyintelligent.com/bio-station/">
+		<meta name="twitter:title" content="BioStation">
+		<meta name="twitter:description" content="EV Charging Stations Powered By Food Waste">
+		<meta name="twitter:image" content="http://www.likelyintelligent.com/bio-station/ev-station.png">
+		<meta name="twitter:image:alt" content="EV Charging Stations Powered By Food Waste">
 		<link rel="stylesheet" href="main.css">
-	</header>
+	</head>
 	<body>
 	<div class="container centered">
 		<img src="bio-station-2.png" class="rounded green-back">
